--- a/client/src/App.css
+++ b/client/src/App.css
@@ -30,6 +30,10 @@ p {
   font-weight: var(--text-font-weight);
 }
 
+.secondary-text {
+  color: var(--bg-grey)
+}
+
 textarea {
   padding: 10px;
   border-radius: 5px;
