--- a/client/src/components/LoggedInPages/Pages/Profiles/CreateProfile/CreateProfileForm.css
+++ b/client/src/components/LoggedInPages/Pages/Profiles/CreateProfile/CreateProfileForm.css
@@ -5,32 +5,39 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  overflow: scroll;
 }
 
-.profile-edit-master-container>h1 {
+.profile-edit-title-container {
+  height: 10%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.profile-edit-title-container>h1 {
   color: var(--grey);
-  text-align: center;
   text-shadow: 0.5pt 0.5pt 1pt var(--grey);
   font-weight: var(--h1-font-weight);
   font-size: 2.5em;
-  padding: 2vh 0;
 }
 
 .profile-edit-current-view {
-  height: 100%;
+  height: 80%;
 }
 
 .profile-edit-switch-view-buttons-container {
-  height: 15vh;
+  height: 10%;
   min-height: 70px;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.profile-edit-switch-view-buttons-container > * {
+.profile-edit-switch-view-buttons-container>* {
   margin: 0 20px;
 }
+
 /* CREATE PROFILE INFO */
 
 .create-profile-info-container {
@@ -107,4 +114,28 @@
   color: var(--red);
   text-shadow: 0.5pt 0.5pt 1pt var(--grey);
   height: 20px;
+}
+
+/* SUMMARY */
+
+.summary-container {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  overflow-y: scroll;
+}
+
+.about-text-container {
+  text-align: center;
+  height: 100%;
+  max-width: 60ch;
+  padding: 10px;
+  overflow: scroll;
+}
+
+.summary-component-button-container {
+  width: 150px;
+  padding: 10px;
 }
