--- a/client/src/components/UtilityComponents/UtilityComponents.css
+++ b/client/src/components/UtilityComponents/UtilityComponents.css
@@ -168,7 +168,7 @@
   cursor: pointer;
 }
 
-/* CONTACT blue-BUTTON */
+/* CONTACT BUTTON */
 
 .contact-button {
   height: 20px;
@@ -189,6 +189,17 @@
 .contact-button:hover {
   background-color: var(--dark-blue);
   cursor: pointer;
+}
+
+/* DISABLED CONTACT BUTTON */
+.disabled.contact-button {
+  background-color: var(--grey);
+  color: var(--bg-grey);
+}
+
+.contact-button:hover {
+  background-color: var(--grey);
+  cursor: initial;
 }
 
 /* FORM NAVIGATION BUTTON */
