jobad info form css and html

--- a/client/src/components/LoggedInPages/Pages/Jobmarket/Pages/SendJobAdForm/SendJobAdForm.css
+++ b/client/src/components/LoggedInPages/Pages/Jobmarket/Pages/SendJobAdForm/SendJobAdForm.css
@@ -48,3 +48,19 @@
   background-color: white;
   border-radius: 5px;
 }
+
+/* INFO FORM */
+
+.job-ad-info-form-container {
+  height: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+@media screen and (max-width: 960px) {
+  .job-ad-info-form-container {
+    flex-direction: column;
+  }
+  
+}
