--- a/client/src/App.css
+++ b/client/src/App.css
@@ -26,6 +26,10 @@ h1 {
   font-weight: var(--h1-font-weight);
 }
 
+h2 {
+  font-weight: var(--h1-font-weight);
+}
+
 h3 {
   font-weight: var(--h3-font-weight);
 }
