--- a/client/src/components/UtilityComponents/UtilityComponents.css
+++ b/client/src/components/UtilityComponents/UtilityComponents.css
@@ -171,13 +171,13 @@
 /* CONTACT BUTTON */
 
 .contact-button {
-  height: 20px;
-  width: 150px;
+  height: 30px;
+  width: 100%;
   white-space: nowrap;
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 10px;
+  padding: 5px 0;
   background-color: var(--blue);
   border-radius: 5px;
   color: white;
