--- a/client/src/components/UtilityComponents/UtilityComponents.css
+++ b/client/src/components/UtilityComponents/UtilityComponents.css
@@ -168,6 +168,10 @@
   cursor: pointer;
 }
 
+.faded-icon {
+  color: var(--tp-white);
+}
+
 /* CONTACT BUTTON */
 
 .contact-button {
@@ -192,6 +196,7 @@
 }
 
 /* DISABLED CONTACT BUTTON */
+
 .disabled.contact-button {
   background-color: var(--grey);
   color: var(--bg-grey);
@@ -226,6 +231,7 @@
 .form-navigation-button-container.next {
   transform: rotate(90deg);
 }
+
 .form-navigation-button-container.previous {
   transform: rotate(-90deg);
 }
@@ -467,13 +473,8 @@
   align-items: center;
 }
 
-.profiles-button {
-  margin: 10px;
-  padding: 10px;
-  color: var(--black);
-  border-style: none;
-  border-radius: 5px;
-  width: 100%;
+.profiles-buttons-container>* {
+  width: 105px;
 }
 
 /* CATEGORY SELECTION */
