--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,6 @@
 :root {
   --bg-white: rgba(240, 240, 240, 1);
+  --tp-white: rgba(240, 240, 240, 0.5);
   --blue: #0087a8;
   --dark-blue: #005b72;
   --red: #ba0038;
