--- a/client/src/components/UtilityComponents/UtilityComponents.css
+++ b/client/src/components/UtilityComponents/UtilityComponents.css
@@ -487,8 +487,7 @@
 }
 
 .category-container {
-  border: 1px solid var(--bg-grey);
-  box-shadow: 0 0 1pt 0 var(--bg-grey);
+  box-shadow: 0 0 3pt 1pt var(--grey);
   background-color: white;
   border-radius: 5px;
   padding: 15px;
