--- a/client/src/components/LoggedInPages/Pages/Jobmarket/Jobmarket.css
+++ b/client/src/components/LoggedInPages/Pages/Jobmarket/Jobmarket.css
@@ -53,6 +53,25 @@
   color: var(--bg-white);
 }
 
+/* NAV NOT SELECTED */
+
+.job-nav-not-selected-container {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.job-nav-not-selected-container > h1 {
+  color: var(--grey);
+  text-align: center;
+  text-shadow: 0.5pt 0.5pt 1pt var(--grey);
+  font-weight: var(--h1-font-weight);
+  font-size: 4em;
+}
+
+
 /* JOB ADS */
 
 .jobads-container {
