use fontawesome icon for searchbar

--- a/client/src/components/UtilityComponents/UtilityComponents.css
+++ b/client/src/components/UtilityComponents/UtilityComponents.css
@@ -283,12 +283,9 @@
   outline: none;
 }
 
-.searchbar-icon {
-  color: var(--searchbar-color);
-  transform: rotate(45deg);
-  font-size: 1.3em;
-  width: 1ch;
-  height: fit-content;
+.searchbar-icon{
+  color: var(--bg-grey);
+  transform: scale(0.7);
 }
 
 .searchbar-container:hover {
